# digi-lab-io-grpc-build-images

./: .editorconfig  .gitignore  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: cleanup.yaml  grpc-gen-dart.yaml  grpc-gen-python.yaml  grpc-gen-ts.yaml
docs/: digi-lab-io-grpc-gen-overview_v1.puml  protobuf-complex-gen-process.puml
grpc-gen-dart/: .bashrc  Dockerfile  Makefile  README.md  version.yaml
grpc-gen-dart/example/dart/: pubspec.yaml
grpc-gen-dart/example/proto/: addressbook.proto
grpc-gen-go-wip/: Dockerfile  Makefile
grpc-gen-python/: .bashrc  Dockerfile  Makefile  version.yaml
grpc-gen-python/example/proto/: book.proto
grpc-gen-python/example/python/: .python-version  Makefile  pyproject.toml
grpc-gen-python/example/python/src/: file_system_demo_message_read.py  file_system_demo_message_write.py  grpc_demo_client.py  grpc_demo_server.py
grpc-gen-ts/: .bashrc  Dockerfile  Makefile  README.md  version.yaml
grpc-gen-ts/example/proto/: book.proto
grpc-gen-ts/example/ts/: package-lock.json  package.json  pnpm-lock.yaml
grpc-gen-ts/example/ts/src/: app.controller.ts  app.module.ts  main.ts
